--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -62,4 +62,15 @@
         app:layout_constraintTop_toTopOf="@+id/thirdPropFrame">
 
     </FrameLayout>
+
+    <Button
+        android:id="@+id/settingsTempBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/thirdPropFrame"
+        app:layout_constraintVertical_bias="0.24000001" />
 </androidx.constraintlayout.widget.ConstraintLayout>
