--- a/app/src/main/res/layout/activity_change_location.xml
+++ b/app/src/main/res/layout/activity_change_location.xml
@@ -7,49 +7,34 @@
     android:layout_width="match_parent">
 
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationEntryET"
-        tools:context=".view.activities.settings.EditLocationActivity" />
-
-    <EditText
-        android:id="@+id/locationEntryET"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/cancelLocationChangeBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/location_entry_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.95" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@android:string/cancel"
+        app:layout_constraintEnd_toStartOf="@+id/confirmLocationBtn"
+        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
 
     <Button
         android:id="@+id/confirmLocationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map" />
+        app:layout_constraintEnd_toEndOf="@+id/countrySpinner"
+        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
 
-    <Button
-        android:id="@+id/cancelLocationChangeBtn"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/countrySpinner"
+        android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:text="@android:string/cancel"
-        app:layout_constraintEnd_toStartOf="@+id/confirmLocationBtn"
-        app:layout_constraintTop_toBottomOf="@+id/map" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
