--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,4 +16,8 @@
         android:id="@+id/navigation_nutrition"
         android:icon="@drawable/ic_insert_chart_black_24dp"
         android:title="Nutrition" />
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_baseline_settings_24_white"
+        android:title="Nutrition" />
 </menu>
