--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -383,20 +383,6 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="@id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/dietTV">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip2"
-                style="@style/listHeaderText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:checkable="false"
-                app:closeIcon="@drawable/ic_close_dark_16dp"
-                app:closeIconEnabled="true"
-                app:layout_constraintStart_toStartOf="@+id/barrier3"
-                app:layout_constraintTop_toBottomOf="@+id/dietTV"
-                tools:text="@string/allergy_gluten" />
         </com.google.android.material.chip.ChipGroup>
 
         <com.google.android.material.chip.ChipGroup
@@ -405,6 +391,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/allergiesChipGroup">
 
