--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -504,7 +504,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/heightUnitTV"
+            android:id="@+id/weightUnitTV"
             style="@style/listHeaderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
