PagedLibrary implementation in progress

--- a/app/src/main/res/layout/cookbook_item.xml
+++ b/app/src/main/res/layout/cookbook_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/cookbookThumbnailIV"
+            android:id="@+id/cookbookThumbnailImgView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/random_dish" />
