--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -12,7 +12,7 @@
         android:layout_marginRight="2dp">
 
         <ImageView
-            android:id="@+id/cookbookThumbnailIV"
+            android:id="@+id/cookbookThumbnailImgView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/random_dish"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cookbookThumbnailIV" />
+            app:layout_constraintTop_toBottomOf="@id/cookbookThumbnailImgView" />
 
         <Button
             android:id="@+id/addToMealPlanBtn"
