--- a/app/src/main/res/layout/fragment_meals_number_customization.xml
+++ b/app/src/main/res/layout/fragment_meals_number_customization.xml
@@ -45,7 +45,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/portionPreferenceLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/cookingTimePreferenceLayout" />
 
     <LinearLayout
         android:id="@+id/portionAmountLayout"
@@ -89,7 +89,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/portionPreferenceLayout"
+        android:id="@+id/cookingTimePreferenceLayout"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -129,7 +129,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/mealPerPlan"
+        android:id="@+id/mealPerPlanLayout"
         android:layout_width="250dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
@@ -165,6 +165,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/four" />
+
+        <Button
+            android:id="@+id/fiveMealsBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/five" />
     </LinearLayout>
 
     <Button
