Add recipe type customization fragment + connect customization activity with backend

--- a/app/src/main/res/layout/fragment_allergy_customization.xml
+++ b/app/src/main/res/layout/fragment_allergy_customization.xml
@@ -51,8 +51,8 @@
                 android:id="@+id/allergyDiaryBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/allergy_diary"
-                android:textOff="@string/allergy_diary" />
+                android:text="@string/allergy_dairy"
+                android:textOff="@string/allergy_dairy" />
 
             <Button
                 android:id="@+id/allergyEggsBtn"
